--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,6 @@ include(external/glm.cmake)
 
 add_subdirectory(core)
 add_subdirectory(assignments/assignment0)
+add_subdirectory(assignments/assignment1)
+
 add_subdirectory(assignments/worksession0)
