--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,5 @@ add_subdirectory(assignments/assignment0)
 add_subdirectory(assignments/assignment1)
 
 add_subdirectory(assignments/worksession0)
+add_subdirectory(assignments/worksession1)
+add_subdirectory(assignments/worksession2)
