--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ include(external/glm.cmake)
 add_subdirectory(core)
 add_subdirectory(assignments/assignment0)
 add_subdirectory(assignments/assignment1)
+add_subdirectory(assignments/assignment2)
 
 add_subdirectory(assignments/worksession0)
 add_subdirectory(assignments/worksession1)
