worksession 3 - class session

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(assignments/assignment2)
 add_subdirectory(assignments/worksession0)
 add_subdirectory(assignments/worksession1)
 add_subdirectory(assignments/worksession2)
+add_subdirectory(assignments/worksession3)
